tests/functional/lang/eval-fail-filterSource-5.err.exp
error:
       … while calling the 'filterSource' builtin
         at /pwd/lang/eval-fail-filterSource-5.nix:1:1:
            1| builtins.filterSource (_: _: 1) ./.
             | ^
            2|

       … while adding path '/pwd/lang'

       … while evaluating the return value of the path filter function

       error: expected a Boolean but found an integer: 1
